syntax="proto3";
option go_package = "/search_engine;";

message SearchEngineRequest{
	// @inject_tag:form:"query" uri:"query"
	string query = 1;
}

message PostData{
	string key = 1;
	string value = 2;
}

message SearchEngineList {
	int64 url_id = 1;
	string desc = 2;
	string url = 3;
	float score = 4;
}

message SearchEngineResponse{
	int64 code = 1;
	string msg = 2;
	int64 count = 3;
	float consuming_time = 4;
	repeated SearchEngineList search_engine_info_list = 5;
	repeated string data = 6;
}

message WordAssociationResponse{
	int64 code = 1;
	string msg = 2;
	repeated string word_association_list = 3;
	string data = 4;
}

service SearchEngineService{
	rpc SearchEngineSearch(SearchEngineRequest) returns(SearchEngineResponse);
	rpc WordAssociation(SearchEngineRequest) returns(WordAssociationResponse);
}
